# presensi_kajian

./: .gitignore  Cargo.toml  README.md  db.sql  package-lock.json  tsconfig.json
db/: createtable.ps1
src/: db.rs  main.rs  server.rs
src/scripts/: forms.ts  index.ts  registrasi.ts
views/static/: registrasi.html  template_sertif.html
views/static/scripts/: forms.js  index.js  registrasi.js
views/static/styles/: cert-style.css  style.css
views/templates/: index.html  rekap.html  success.html  template_sertif.html
