[package]
name = "presensi_kajian"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["functions"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tera = "1.17.1"

[dev-dependencies]
log = "0.4.17"